--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "nodeVersion": "v22.14.0",
   "private": true,
   "scripts": {
+    "postinstall": "npm install --legacy-peer-deps",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
