--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.0",
     "@tanstack/react-query": "^5.77.1",
     "axios": "^1.9.0",
+    "lucide-react": "^0.513.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
